--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.github.andyxialm:ColorDialog:1.0.0'
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.android.support:support-v4:26.+'
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
+    compile 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
+    compile 'com.github.eltos:simpledialogfragment:2.2.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.6.0'
     testCompile 'junit:junit:4.12'
 }
