--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,8 @@ dependencies {
     compile 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     compile 'com.github.eltos:simpledialogfragment:2.2.2'
     compile 'com.afollestad.material-dialogs:core:0.9.6.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.multidots:fingerprint-auth:1.0.1'
+    compile 'com.wang.avi:library:2.1.3'
     testCompile 'junit:junit:4.12'
 }
